<resources>
    <string name="app_name">WaterYou</string>
    <string name="water_valve">Water Valve</string>
    <string name="auto">Auto</string>
    <string name="lamp">Lamp</string>
    <string name="dim">Dim</string>
    <string name="bright">Bright</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="closed">closed</string>
    <string name="open">open</string>
    <string name="Timer">Water the plant every x hours (0 for off)</string>
</resources>
